# detach

./: .gitignore  .travis.yml  detach.py  pyproject.toml
detach/: __init__.py
