[build-system]
requires = ["poetry>=0.12,<1.0.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "detach3k"
version = "1.0.0"
description = "Fork and detach the current process."
readme = "README.md"
authors = [
    "Julia Patrin <papercrane@reversefold.com>",
    "Ryan Bourgeois <bluedragonx@gmail.com>",
]
homepage = "https://github.com/reversefold/detach"
repository = "https://github.com/reversefold/detach.git"
packages = [
    {include="detach"},
]
license = "BSD-derived"
keywords = ["fork", "daemon", "detach"]
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "License :: OSI Approved :: BSD License",
]

[tool.poetry.dependencies]
python = ">=3.7,<4"
